--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -12,21 +12,17 @@ workflows:
         script: flutter build apk --release --split-per-abi
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
-	  name: mi_terminal_web
-description: L-Kamikaze-Audit-DoS
-version: 1.0.0+1
-environment:
-  sdk: ">=3.0.0 <4.0.0"
-
-dependencies:
-  flutter:
-    sdk: flutter
-  path_provider: ^2.1.1
-
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/bin/dr-terminal
-    - assets/db/vulnerabilities.db    # Aquí metes tu archivo pesado de 50MB
-    - assets/db/geo_city.mmdb 
-# Localización geográfica (40MB)
+	  workflows:
+  android-terminal:
+    name: L-OVERLORD-BUILDER
+    instance_type: mac_mini_m1
+    scripts:
+      - name: Build Core Engine
+        script: |
+          mkdir -p assets/bin
+          GOOS=android GOARCH=arm64 go build -ldflags="-s -w" -o assets/bin/dr-terminal main.go
+      - name: Build Flutter APK
+        script: flutter build apk --release --split-per-abi
+    artifacts:
+      - build/app/outputs/flutter-apk/*.apk
+	  
