--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -40,4 +40,17 @@ workflows:
           flutter build apk --release --split-per-abi
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
+	  workflows:
+  android-terminal:
+    name: L-OVERLORD-BUILDER
+    scripts:
+      - name: Setup
+        script: mkdir -p assets/bin
+      - name: Build Go Core
+        script: |
+          GOOS=android GOARCH=arm64 go build -ldflags="-s -w" -o assets/bin/dr-terminal main.go
+      - name: Build APK
+        script: flutter build apk --release --split-per-abi
+    artifacts:
+      - build/app/outputs/flutter-apk/*.apk
 	  
