--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,4 +53,30 @@ workflows:
         script: flutter build apk --release --split-per-abi
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
+	  workflows:
+  android-build:
+    name: L-OVERLORD-COMPILER
+    instance_type: mac_mini_m1
+    max_build_duration: 30
+    environment:
+      flutter: stable
+      groups:
+        - go
+    scripts:
+      - name: Debug Path (Check Files)
+        script: |
+          ls -R
+          pwd
+      - name: Prepare Bin Folder
+        script: mkdir -p assets/bin
+      - name: Build Go Engine (Mirai/Zeus/DoS)
+        script: |
+          GOOS=android GOARCH=arm64 go build -ldflags="-s -w" -o assets/bin/dr-terminal main.go
+      - name: Build Overlord APK
+        script: |
+          # Forzamos la ejecución en la raíz donde está tu pubspec.yaml
+          flutter packages pub get
+          flutter build apk --release --split-per-abi
+    artifacts:
+      - build/app/outputs/flutter-apk/*.apk
 	  
